2018-08-31  Saam barati  <sbarati@apple.com>

        convertToRegExpMatchFastGlobal must use KnownString as the child use kind
        https://bugs.webkit.org/show_bug.cgi?id=189173
        <rdar://problem/43501645>

        Reviewed by Michael Saboff.

        * stress/may-exit-should-be-false-regexp-constant-folding.js: Added.
        (foo):
        (bar):

2018-08-30  Saam barati  <sbarati@apple.com>

        CSE DataViewGet* DFG nodes
        https://bugs.webkit.org/show_bug.cgi?id=188768

        Reviewed by Yusuke Suzuki.

        * microbenchmarks/dataview-cse.js: Added.
        (assert):
        (test):
        * stress/dataview-get-cse.js: Added.
        (assert):
        (test1.foo):
        (test1):
        (test2.foo):
        (test2):
        (test3.foo):
        (test3):
        (test4.foo):
        (test4):
        (test5.foo):
        (test5):
        (test6.foo):
        (test6):

2018-08-30  Yusuke Suzuki  <yusukesuzuki@slowstart.org>

        output of toString() of Generator is wrong
        https://bugs.webkit.org/show_bug.cgi?id=188952

        Reviewed by Saam Barati.

        * stress/function-to-string.js: Added.
        (shouldBe):
        (shouldBe.test):
        (test):
        (shouldBe.async.test):
        (async.test):
        (shouldBe.async):
        (async):
        * test262/expectations.yaml:

2018-08-29  Mark Lam  <mark.lam@apple.com>

        Add some missing exception checks in JSRopeString::resolveRopeToAtomicString().
        https://bugs.webkit.org/show_bug.cgi?id=189132
        <rdar://problem/42513068>

        Reviewed by Saam Barati.

        * stress/regress-189132.js: Added.

2018-08-24  Yusuke Suzuki  <yusukesuzuki@slowstart.org>

        [JSC] Array.prototype.reverse modifies JSImmutableButterfly
        https://bugs.webkit.org/show_bug.cgi?id=188794

        Reviewed by Saam Barati.

        * stress/reverse-with-immutable-butterfly.js: Added.
        (shouldBe):
        (reverseInt):
        (reverseDouble):