@@ -1,0 +1,3 @@
+//@ runDefault
+// This test passes if it does not crash.
+['a'+0].lastIndexOf('a0');
